--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@notionhq/client": "^5.7.0",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
+    "node-fetch": "^2.7.0",
     "openai": "^6.16.0"
   },
   "devDependencies": {
