--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,6 @@
 OPENAI_API_KEY=your_openai_api_key_here
 NOTION_API_KEY=your_notion_integration_token_here
 NOTION_DATABASE_ID=your_notion_database_id_here
+SUPABASE_URL=your_supabase_project_url
+SUPABASE_SERVICE_KEY=your_supabase_service_key
 PORT=3000
