--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,5 @@ NOTION_API_KEY=your_notion_integration_token_here
 NOTION_DATABASE_ID=your_notion_database_id_here
 SUPABASE_URL=your_supabase_project_url
 SUPABASE_SERVICE_KEY=your_supabase_service_key
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
 PORT=3000
